# process-control

./: .gitignore  Makefile.am  configure.ac
include/: Makefile.am
include/process-control/: Process.hpp
src/: Makefile.am  Process.cpp  libprocess.map
test/: Makefile.am  ProcessTest.cpp  ProcessTest.h  SpawnedProcess.cpp  TestRunner.cpp
